# TTESSIM

./: CMakeLists.txt  README.md  cleardata.sh  declaration.txt  injectdeclaration.bash  make.sh  readme.md  run.sh
include/: cmdparser.hh  const.hh  global.hh  simenv.hh
include/pdesolver/: pdesolver.hh
include/tstorageunit/: tstorageunit.hh
scripts/: cleardata.sh  make.sh  ovsplot.py  plot.py  plotdiffexact.py  run.sh  task5.sh  testing.sh  thermalplot.py
src/: main.cc  main_testing.cc  pdesolver.cc  tstorageunit.cc
